Grid layout is stablised functional

--- a/src/utilities/design-utilities/sass-variables.scss
+++ b/src/utilities/design-utilities/sass-variables.scss
@@ -20,7 +20,7 @@ $linksBlue: #a5d6ff;
 // this one is yellow for color consistency with my portfolio
 //$linksBlue: #b99128;
 
-//@font-face {
-//  font-family: ArashShoarHelveticaNeue;
-//  src: url('../../assets/fonts/HelveticaNeue-UltLt.otf');
-//}
+@font-face {
+  font-family: ArashShoarHelveticaNeue;
+  src: url('assets/fonts/HelveticaNeue-UltLt.otf');
+}
