props passes from CurrentTemp to its child LocationAndData

--- a/src/utilities/design-utilities/sass-variables.scss
+++ b/src/utilities/design-utilities/sass-variables.scss
@@ -22,5 +22,5 @@ $linksBlue: #a5d6ff;
 
 @font-face {
   font-family: ArashShoarHelveticaNeue;
-  src: url('assets/fonts/HelveticaNeue-UltLt.otf');
+  src: url('~@/assets/fonts/HelveticaNeue-UltLt.otf');
 }
