--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,7 @@
 
 .app {
   color: #ffffff;
+  background-color: navy;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
