--- a/src/components/CurrentTemp/CurrentTemp.module.scss
+++ b/src/components/CurrentTemp/CurrentTemp.module.scss
@@ -1,3 +1,29 @@
+@import '@/utilities/design-utilities/sass-variables';
+$currentTempBase: 1rem;
+
 .currentTemp {
-  color: navy;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 780px;
+
+  .tempHeader {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media only screen and (min-width: $smBreakPoint) {
+
+    .tempHeader {
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+
+  @media only screen and (min-width: $xlBreakPoint) {
+
+    .tempHeader {
+      align-items: flex-start;
+    }
+  }
 }
