DownArrowIcon and UpArrowIcon are added

--- a/src/components/CurrentTemp/DescriptionAndTemp/DescriptionAndTemp.module.scss
+++ b/src/components/CurrentTemp/DescriptionAndTemp/DescriptionAndTemp.module.scss
@@ -18,6 +18,10 @@ $currentTempBase: 1rem;
     }
   }
 
+  .minMax {
+    display: flex;
+  }
+
   .tempAndUnits {
     display: flex;
     align-items: flex-end;
